# japanese-developer

./: pyproject.toml
src/japanese_developer/: __init__.py  cli.py
src/japanese_developer/templates/: GEMINI.md  hooks.json  primer.md
src/japanese_developer/templates/commands/: contact.md  plan.md  review.md  task.md
src/japanese_developer/templates/hooks/: auto-worklog.sh  block-server-start.sh  enforce-japanese.sh  font-select.sh  interactive-guard.sh  pr-log-sync.sh  primer.sh  syntax-check.sh
